--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 /* Layout screen */
 #app {
   display: grid;
-  grid-template-columns: auto 350px;
+  grid-template-columns: 1020px auto;
   grid-template-rows: 50px auto;
   width: 100vw;
   height: 100vh;
@@ -27,6 +27,8 @@
   grid-area: field;
   border-radius: 10px;
   overflow: hidden;
+  width: 100%;
+  height: 670px;
 }
 
 #app #menu {
@@ -57,7 +59,7 @@
 /* Score */
 #app #menu #score {
   width: 100%;
-  height: 40px;
+  height: 50px;
   display: flex;
   margin-bottom: 40px;
 }
@@ -69,9 +71,10 @@
   color: #fff;
   font-weight: bold;
   text-align: cente;
-  line-height: 40px;
+  line-height: 50px;
   flex-grow: 1;
   border-radius: 10px 0px 0px 10px;
+  width: calc((100% - 45px - 45px) / 2);
 }
 
 #app #menu #score .team-name.right {
@@ -81,12 +84,12 @@
 #app #menu #score .goals {
   display: inline-block;
   height: 100%;
-  width: 40px;
+  width: 45px;
   background-color: #316900;
   color: #fff;
   font-weight: bold;
   text-align: center;
-  line-height: 40px;
+  line-height: 50px;
   flex-shrink: 0;
   font-size: 30px;
 }
